'fix generazione immagini'

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -34,24 +34,24 @@ Ci siamo avvalsi dell'utilizzo di un microcomputer e di due microfoni MEMS, risp
 Abbiamo collegato i MEMS al Pi3 seguento il seguente schema
 
 <img
-src="/img/picajon/collegamento.png"
+src="/sensori/img/picajon/collegamento.png"
 style="width: 450px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
 ottenendo come risultato finale:
 
 <img
-src="/img/picajon/hw1.jpg"
+src="/sensori/img/picajon/hw1.jpg"
 style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
 <img
-src="/img/picajon/hw2.jpg"
+src="/sensori/img/picajon/hw2.jpg"
 style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
 <img
-src="/img/picajon/hw3.jpg"
+src="/sensori/img/picajon/hw3.jpg"
 style="width: 450px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
@@ -88,7 +88,7 @@ env[RIGHT] = max(abs(right), env[RIGHT] * ALPHA)
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon con il suo relativo inviluppo:
 
 <img
-src="/img/picajon/envelope.png"
+src="/sensori/img/picajon/envelope.png"
 style="width: 600px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
@@ -104,7 +104,7 @@ diff = env - buffer[buffer_idx]
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon, il suo inviluppo e derivata:
 
 <img
-src="/img/picajon/derivative.png"
+src="/sensori/img/picajon/derivative.png"
 style="width: 600px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
@@ -117,7 +117,7 @@ basandoci sulla "temporizzazione" del colpo ovvero, se il colpo è stato captato
 Subito dopo mettiamo da parte i 1024 campioni successivi, relativi al canale corrispondente, prima di verificare nuovamente la presenza di un onset.
 
 <img
-src="/img/picajon/onset.png"
+src="/sensori/img/picajon/onset.png"
 style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
@@ -132,14 +132,14 @@ Qui in basso potete vedere i psd delle due zone che ci interessa poter distingue
 <figure>
     <figcaption>Frontale</figcaption>
     <img
-    src="/img/picajon/front.png"
+    src="/sensori/img/picajon/front.png"
     style="width: 600px; margin-bottom: 30px"/>
 </figure>
 
 <figure>
     <figcaption>Laterale</figcaption>
     <img
-    src="/img/picajon/lateral.png"
+    src="/sensori/img/picajon/lateral.png"
     style="width: 600px; margin-bottom: 30px"/>
 </figure>    
 
