Correzzione relazione picajon

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -21,13 +21,13 @@ Il cajon continuerà a essere suonato al solito modo, ma quando il musicista suo
 
 Ribadiamo che per raggiungere lo scopo del progetto si voleva manterene un budget basso in modo da permettere a chiunque di utilizzare questa soluzione con poche decine di euro.
 
-L'**idea di base** è quella di raccogliere i segnali provenienti dal cajon con l'ausilio di microfoni ed elabolarli in tempo reale per decidere se provengono dai lati oppure dalla tapa. Nel primo caso vogliamo riprodurre il campione corrispondente al **left** o **right** (facciata sinistra o destra), mentre nel secondo non dobbiamo riprodurre alcun suono extra.
+L'**idea di base** è quella di raccogliere i segnali provenienti dal cajon con l'ausilio di microfoni ed elabolarli in tempo reale per decidere se provengono dai lati oppure dalla parte frontale che d'ora in poi chiamaremo **tapa**. Nel primo caso vogliamo riprodurre il campione corrispondente al **left** o **right** (facciata sinistra o destra), mentre nel secondo non dobbiamo riprodurre alcun suono extra.
 
 ## Hardware
 Ci siamo avvalsi dell'utilizzo di un microcomputer e di due microfoni MEMS, rispettivamente:
 
 * [Raspberry Pi3](https://www.raspberrypi.org/products/raspberry-pi-3-model-b/)
-* [Mems adafruit](https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout/overview)
+* [Adafruit I2S MEMS Microphone Breakout ](https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout/overview)
 
 Abbiamo collegato i MEMS al Pi3 seguento il seguente schema
 
@@ -56,23 +56,21 @@ margin-right: auto;"/>
 
 
 Come si può notare dalle immagini soprastanti, i microfoni sono stati racchiusi in una scatolina piena di cotone. Questo è stato necessario per non far andare i microfoni in saturazione.
-I microfoni sono stati posizionati internamente al cajon, nello specifico all'interno delle due facciate laterali.
+I microfoni sono stati posizionati internamente al cajon, nello specifico appoggiati alle facciate laterali.
 
 ## Idea
 
 I tre punti cruciali del progetto sono:
 * identificare gli **onset** ovvero gli istanti nei quali il cajon viene colpito
 * decidere la **provenienza** del colpo:
-    - frontale (tapa)
+    - tapa
     - sinistro
     - destro
 * **riprodurre** il campione rispettivo (sinistro o destro) "in tempo reale" e gestire il mix tra i due qualora fosse necessario
 
 È da sottolineare come tutte le scelte ai punti sopra devono essere fatte in **"tempo reale"**. Questo aspetto ha condizionato molte delle decisini prese durante la realizzazione del progetto.
 
-Per la rilevazione degli onset ci siamo avvalsi di:
-* Inviluppo
-* derivata
+Per la rilevazione degli onset ci siamo avvalsi di: inviluppo e derivata.
 
 #### Inviluppo
 
@@ -81,6 +79,19 @@ Per il calcolo dell'inviluppo è stata usata questa formula:
 ```
 env[LEFT] = max(abs(left), env[LEFT] * ALPHA)
 env[RIGHT] = max(abs(right), env[RIGHT] * ALPHA)
+```
+
+dove
+```
+LEFT = 0 e RIGHT = 1 sono due costanti
+ALPHA = .9995 è una costante
+env è un array di lunghezza 2 dove memorizzeremo l'inviluppo relativo
+    a LEFT e RIGHT.
+left e right sono due varibili, dove ad ogni iterazione del ciclo si
+    trovano il campione destro e sinistro appena letti.
+max e abs sono due funzioni che calcolano rispettivamenti il massimo
+    e il valore assoluto.
+
 ```
 
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon con il suo relativo inviluppo:
@@ -98,6 +109,16 @@ di dimensione 24. Ad ogni campione è stata effettuata una differenza tra l'invi
 ```
 diff = env - buffer[buffer_idx]
 ```
+dove
+
+```
+diff è un array di lunghezza 2 dove memorizzeremo la differenza tra
+    l'inviluppo corrente e quello calcolato 24 campioni indietro.
+buffer_idx è una variabile di ciclo che va da 0 a 23.
+buffer è un buffer circolare ovvero una matrice di dimensione 24 * 2
+    dove ad ogni iterazione si troveranno gli ultimi
+    24 valori dell'inviluppo.
+```
 
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon, il suo inviluppo e derivata:
 
@@ -108,7 +129,7 @@ margin-right: auto;"/>
 
 
 
-#### L/R, FFT e rapporto
+#### Left/Right, FFT e rapporto
 Per determinare la presenza di un *onset* ci siamo avvalsi dell'utilizzo di una soglia.
 Quando una delle due derivate supera la soglia memorizziamo se si è trattato del canale *left* o *right*
 basandoci sulla "temporizzazione" del colpo ovvero, se il colpo è stato captato prima dal microfono sinistro allora vuol dire che è stato dato sul lato sinistro.
@@ -120,7 +141,7 @@ style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
 
-Raccolti i 1024 passiamo al calcolo della **FFT** e del **PSD** (*power spectral density*) che sarà necessario per determinare se l'onset rilevato è **frontale** o **laterale**.
+Raccolti i 1024 passiamo al calcolo della [**FFT**](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.fft.rfft.html) e del [**PSD**](https://en.wikipedia.org/wiki/Spectral_density) che sarà necessario per determinare se l'onset rilevato è **frontale** o **laterale**.
 
 Qui in basso potete vedere i psd delle due zone che ci interessa poter distinguere:
 * frontale
@@ -169,15 +190,16 @@ Alcune delle sue principali caratteristiche sono:
 * tools per integrare coidice C/C++ e Fortran
 * funzioni per algebra lineare, trasformata di Fourier.
 
-Besides its obvious scientific uses, NumPy can also be used as an efficient multi-dimensional container of generic data. Arbitrary data-types can be defined. This allows NumPy to seamlessly and speedily integrate with a wide variety of databases.
-
 ##### Cython
-Cython è un linguaggio di programmazione che permette di scrivere estensioni in C per Python. Esso ha le potenzialità di Python ma supporta ad esempio le chiamate a funzioni in C o la dichiarazione dei tipi sulle variabili. Questo permette al compilatore di generare del codice C veramente efficiente partendo da quello Cython.
+Cython è una estensione del linguaggio Python che permette di scrivere estensioni in C per Python. Esso ha le potenzialità di Python ma supporta ad esempio le chiamate a funzioni in C o la dichiarazione dei tipi sulle variabili. Questo permette al compilatore di generare del codice C veramente efficiente partendo da quello Cython.
 #### Premix e Multithread
 * **Premix**
 
-    Se il campione destro e sinistro vengono colpiti ad una distanza temporale tale per cui il primo dei due non è ancora finito quando l'altro inizia è necessario far suonare insieme i due campioni, ovvero effettuare un operazione di Mix.
-    Questa operazione è dispendiosa in termini di tempo ed è per questo che abbiamo scelto di creare una **matrice di liste** di *premix*.
+    Se il campione destro e sinistro vengono colpiti ad una distanza temporale tale per cui il primo dei due non è ancora finito quando l'altro inizia è necessario far suonare insieme i due campioni, ovvero effettuare un operazione di **mix**.
+    L'operazione di mix consiste nel sommare i due vettori corrispondenti ai campioni da suonare, dimezzandone l'ampiezza.
+    Il mix è dispendioso in termini di tempo ed è per questo che abbiamo scelto di creare una **matrice di liste** che chiamaremo **matrice di premix**.
+    Con **premix** indichiamo l'operazione di mix sopra descritta fatta all'avvio del programma, prima che il musicista inizi a suonare, motivo per il quale
+    utilizziamo premix al posto di mix.
     Come prima operazione abbiamo diviso i due campioni da suonare in *fette* grandi 512 campioni. Queste fette sono delle liste e nel caso in cui l'ultima ha lunghezza < 512, sono stati aggiunti degli zeri.
 
     Nella posizione ```[i,j]``` della matrice di *premix* si trova la fetta i-esima del campione destro mixata con la fetta j-esima del campione sinistro. La riga zeresima è riservata alle fette del solo campione sinistro, mentre la colonna zeresima a quelle del campione destro.
@@ -191,10 +213,3 @@ Cython è un linguaggio di programmazione che permette di scrivere estensioni in
     - uno che suona
 
     I due thread sono sincronizzati tramite un *semaforo*.
-
-
-
-## Dimostrazione d'uso
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/x9qEmmPSHs8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
