'Cambiata immagine e fix tipografici cajon'

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -10,12 +10,13 @@ cajon, permettendo anche la riproduzione di campioni tramite l'utilizzo di un Ra
 ## Obbiettivi e descrizione
 L'obbiettivo di questo progetto è quello di aumentare le "possibilità sonore" offerte da un [cajon](https://en.wikipedia.org/wiki/Caj%C3%B3n), uno strumento musicale.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Cajon_musician.jpg" style="width: 250px; margin-bottom: 30px; display: block; margin-left: auto;
-margin-right: auto;"/>
+<img src="/sensori/img/picajon/raffa_cajon.jpg"
+style="width: 400px; margin-bottom: 30px; display: block;
+margin-left: auto; margin-right: auto;"/>
 
 Al giorno d'oggi il cajon viene utilizzato in contesti di musica moderna dove vi è la necessità di
 utilizzare anche altre tipologie di suoni (un tamburello, un clap, un wind chimes..), ecco la definizione di **"cajon aumentato"**.
-Quello che vogliamo fare è  dotare il cajon di una tecnologia **economica** in grado di offire al musicista la possibilità di aggiungere **due suoni** (*campioni*) per espandere le sue possibilità sonore.
+Quello che vogliamo fare è  dotare il cajon di una tecnologia **economica** in grado di offrire al musicista la possibilità di aggiungere **due suoni** (*campioni*) per espandere le sue possibilità sonore.
 
 Il cajon continuerà a essere suonato al solito modo, ma quando il musicista suonerà la faccia destra o sinistra dello strumento verranno riprodotti i campioni rispettivi.
 
@@ -82,17 +83,20 @@ env[RIGHT] = max(abs(right), env[RIGHT] * ALPHA)
 ```
 
 dove
-```
-LEFT = 0 e RIGHT = 1 sono due costanti
-ALPHA = .9995 è una costante
-env è un array di lunghezza 2 dove memorizzeremo l'inviluppo relativo
-    a LEFT e RIGHT.
-left e right sono due varibili, dove ad ogni iterazione del ciclo si
-    trovano il campione destro e sinistro appena letti.
-max e abs sono due funzioni che calcolano rispettivamenti il massimo
-    e il valore assoluto.
 
-```
+`LEFT = 0` e `RIGHT = 1` sono due costanti.
+
+`ALPHA` è una costante che determina l'importanza dell'inviluppo calcolato
+fino ad un dato istante, rispetto al nuovo campione.
+
+`env` è un array di lunghezza 2 dove memorizzeremo l'inviluppo relativo a
+LEFT e RIGHT.
+
+`left` e `right` sono due varibili, dove ad ogni iterazione del ciclo si
+trovano il campione destro e sinistro appena letti.
+
+`max` e `abs` sono due funzioni che calcolano rispettivamenti il massimo e
+il valore assoluto.
 
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon con il suo relativo inviluppo:
 
@@ -111,14 +115,13 @@ diff = env - buffer[buffer_idx]
 ```
 dove
 
-```
-diff è un array di lunghezza 2 dove memorizzeremo la differenza tra
-    l'inviluppo corrente e quello calcolato 24 campioni indietro.
-buffer_idx è una variabile di ciclo che va da 0 a 23.
-buffer è un buffer circolare ovvero una matrice di dimensione 24 * 2
-    dove ad ogni iterazione si troveranno gli ultimi
-    24 valori dell'inviluppo.
-```
+
+`diff` è un array di lunghezza 2 dove memorizzeremo la differenza tra l'inviluppo corrente e quello calcolato 24 campioni indietro.
+
+`buffer_idx` è una variabile di ciclo che va da 0 a 23.
+
+`buffer` è un buffer circolare ovvero una matrice di dimensione 24 * 2 dove ad ogni iterazione si troveranno gli ultimi 24 valori dell'inviluppo.
+
 
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon, il suo inviluppo e derivata:
 
