'inseriti grafici hardware e software'

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -30,14 +30,21 @@ Ci siamo avvalsi dell'utilizzo di un microcomputer e di due microfoni MEMS, risp
 * [Raspberry Pi3](https://www.raspberrypi.org/products/raspberry-pi-3-model-b/)
 * [Adafruit I2S MEMS Microphone Breakout ](https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout/overview)
 
-Abbiamo collegato i MEMS al Pi3 seguento il seguente schema
+Abbiamo collegato i microfoni al Raspberry seguento il seguente schema
+
+<img
+src="/sensori/img/picajon/hardware_raspberry.png"
+style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
+margin-right: auto;"/>
+
+I pin dei microfoni sono stati collegati al pin del raspeberry in questo modo:
 
 <img
 src="/sensori/img/picajon/collegamento.png"
 style="width: 450px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
-ottenendo come risultato finale:
+Ecco il risultato finale:
 
 <img
 src="/sensori/img/picajon/hw1.jpg"
@@ -212,7 +219,13 @@ Cython è una estensione del linguaggio Python che permette di scrivere estensio
 
     Per rispettare il più possibile il requisito del *real-time* ci siamo avvalsi dell'utilizzo dei Thread utilizzando il modulo di python [threading](https://docs.python.org/2/library/threading.html#module-threading).
     Nello specifico sono presenti due thread:
-    - uno che ascolta
-    - uno che suona
+    - uno che ascolta: ```MAIN THREAD```
+    - uno che suona: ```PLAYER THREAD```
 
-    I due thread sono sincronizzati tramite un *semaforo*.
+    I due thread sono sincronizzati tramite un *evento* (una sorta di semaforo).
+    Nell'immagine sottostante potete vedere il *workflow* del software, dove i *box* in arancione rappresentano le porzioni di codice scritte in *Cython*.
+
+<img
+src="/sensori/img/picajon/grafico_software.png"
+style="margin-bottom: 30px; display: block; margin-left: auto;
+margin-right: auto;"/>
