'piccole correzzioni relazione'

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -5,7 +5,7 @@ subtitle: Cajon "aumentato"
 tags: [raspberry, signal]
 ---
 Aumentare le "possibilità sonore" offerte da un
-cajon, permettendo anche la riproduzione di campioni tramite l'utilizzo di un Raspberry Pi3 e due microfoni MEMS.
+cajon, permettendo la riproduzione di campioni tramite l'utilizzo di un Raspberry Pi3 e due microfoni MEMS.
 
 ## Obbiettivi e descrizione
 L'obbiettivo di questo progetto è quello di aumentare le "possibilità sonore" offerte da un [cajon](https://en.wikipedia.org/wiki/Caj%C3%B3n), uno strumento musicale.
@@ -14,15 +14,13 @@ L'obbiettivo di questo progetto è quello di aumentare le "possibilità sonore" 
 style="width: 400px; margin-bottom: 30px; display: block;
 margin-left: auto; margin-right: auto;"/>
 
-Al giorno d'oggi il cajon viene utilizzato in contesti di musica moderna dove vi è la necessità di
-utilizzare anche altre tipologie di suoni (un tamburello, un clap, un wind chimes..), ecco la definizione di **"cajon aumentato"**.
+Al giorno d'oggi il cajon viene utilizzato in contesti di musica moderna dove spesso vi è la necessità di
+utilizzare anche altri tipi di suoni (un tamburello, un clap, un wind chimes..), ecco la definizione di **"cajon aumentato"**.
 Quello che vogliamo fare è  dotare il cajon di una tecnologia **economica** in grado di offrire al musicista la possibilità di aggiungere **due suoni** (*campioni*) per espandere le sue possibilità sonore.
 
-Il cajon continuerà a essere suonato al solito modo, ma quando il musicista suonerà la faccia destra o sinistra dello strumento verranno riprodotti i campioni rispettivi.
+Il cajon continuerà a essere suonato al "solito modo", ma quando il musicista suonerà la faccia destra o sinistra dello strumento verranno riprodotti i campioni rispettivi.
 
-Ribadiamo che per raggiungere lo scopo del progetto si voleva manterene un budget basso in modo da permettere a chiunque di utilizzare questa soluzione con poche decine di euro.
-
-L'**idea di base** è quella di raccogliere i segnali provenienti dal cajon con l'ausilio di microfoni ed elabolarli in tempo reale per decidere se provengono dai lati oppure dalla parte frontale che d'ora in poi chiamaremo **tapa**. Nel primo caso vogliamo riprodurre il campione corrispondente al **left** o **right** (facciata sinistra o destra), mentre nel secondo non dobbiamo riprodurre alcun suono extra.
+L'**idea di base** è quella di raccogliere i segnali provenienti dal cajon con l'ausilio di microfoni ed elabolarli in tempo reale per decidere se provengono dai lati oppure dalla parte frontale che d'ora in poi chiamaremo **tapa**. Nel primo caso vogliamo riprodurre il campione corrispondente alla facciata sinistra o destra (**left** o **right**), mentre nel secondo non dobbiamo riprodurre alcun suono extra.
 
 ## Hardware
 Ci siamo avvalsi dell'utilizzo di un microcomputer e di due microfoni MEMS, rispettivamente:
@@ -76,9 +74,9 @@ I tre punti cruciali del progetto sono:
     - destro
 * **riprodurre** il campione rispettivo (sinistro o destro) "in tempo reale" e gestire il mix tra i due qualora fosse necessario
 
-È da sottolineare come tutte le scelte ai punti sopra devono essere fatte in **"tempo reale"**. Questo aspetto ha condizionato molte delle decisini prese durante la realizzazione del progetto.
+È da sottolineare come tutte le scelte ai punti sopra devono essere fatte in **"tempo reale"**. Questo aspetto ha condizionato molte delle decisioni prese durante la realizzazione del progetto.
 
-Per la rilevazione degli onset ci siamo avvalsi di: inviluppo e derivata.
+Per la rilevazione degli onset ci siamo avvalsi di: **inviluppo** e **derivata**.
 
 #### Inviluppo
 
@@ -96,11 +94,11 @@ dove
 `ALPHA` è una costante che determina l'importanza dell'inviluppo calcolato
 fino ad un dato istante, rispetto al nuovo campione.
 
-`env` è un array di lunghezza 2 dove memorizzeremo l'inviluppo relativo a
+`env` è un array di lunghezza 2 dove memorizziamo l'inviluppo relativo a
 LEFT e RIGHT.
 
 `left` e `right` sono due varibili, dove ad ogni iterazione del ciclo si
-trovano il campione destro e sinistro appena letti.
+trovano il campione sinistro e destro appena letti.
 
 `max` e `abs` sono due funzioni che calcolano rispettivamenti il massimo e
 il valore assoluto.
@@ -115,7 +113,7 @@ margin-right: auto;"/>
 #### Derivata
 
 Per il calcolo della derivata ci siamo avvalsi di un *buffer circolare*
-di dimensione 24. Ad ogni campione è stata effettuata una differenza tra l'inviluppo attuale e l'inviluppo calcolato 24 campioni indietro:
+di dimensione 24. Per ogni campione è stata effettuata una differenza tra l'inviluppo attuale e l'inviluppo calcolato 24 campioni indietro:
 
 ```
 diff = env - buffer[buffer_idx]
@@ -123,11 +121,11 @@ diff = env - buffer[buffer_idx]
 dove
 
 
-`diff` è un array di lunghezza 2 dove memorizzeremo la differenza tra l'inviluppo corrente e quello calcolato 24 campioni indietro.
+`diff` è un array di lunghezza 2 dove memorizziamo la differenza tra l'inviluppo corrente e quello calcolato 24 campioni indietro.
 
 `buffer_idx` è una variabile di ciclo che va da 0 a 23.
 
-`buffer` è un buffer circolare ovvero una matrice di dimensione 24 * 2 dove ad ogni iterazione si troveranno gli ultimi 24 valori dell'inviluppo.
+`buffer` è un buffer circolare ovvero una matrice di dimensione 24 * 2 dove ad ogni iterazione si trovano gli ultimi 24 valori dell'inviluppo.
 
 
 Nell'immagine sottostante potete vedere il canale sinistro di una porzione di segnale registrato dal cajon, il suo inviluppo e derivata:
@@ -186,23 +184,23 @@ ratio = np.sum(psd[2:10]) / np.sum(psd[23:26])
 
 Ora non resta che "suonare" il campione corrispondente.
 ## Software
-#### Python
+### Python
 Python è risultato il linguaggio di programmazione più adatto in fase prototipale e con le giuste aggiunte è stato performante anche nella realizzazione del progetto.
 
-##### Numpy
+#### Numpy
 
 Numpy è il principale pacchetto usato nel calcolo scientifico in Python.
 Alcune delle sue principali caratteristiche sono:
 
 
-* array N-dimensionali
-* broadcasting delle funzioni
-* tools per integrare coidice C/C++ e Fortran
+* array N-dimensionali,
+* broadcasting delle funzioni,
+* tool per integrare codice C/C++ e Fortran,
 * funzioni per algebra lineare, trasformata di Fourier.
 
-##### Cython
+#### Cython
 Cython è una estensione del linguaggio Python che permette di scrivere estensioni in C per Python. Esso ha le potenzialità di Python ma supporta ad esempio le chiamate a funzioni in C o la dichiarazione dei tipi sulle variabili. Questo permette al compilatore di generare del codice C veramente efficiente partendo da quello Cython.
-#### Premix e Multithread
+### Premix e Multithread
 * **Premix**
 
     Se il campione destro e sinistro vengono colpiti ad una distanza temporale tale per cui il primo dei due non è ancora finito quando l'altro inizia è necessario far suonare insieme i due campioni, ovvero effettuare un operazione di **mix**.
@@ -223,7 +221,9 @@ Cython è una estensione del linguaggio Python che permette di scrivere estensio
     - uno che suona: ```PLAYER THREAD```
 
     I due thread sono sincronizzati tramite un *evento* (una sorta di semaforo).
-    Nell'immagine sottostante potete vedere il *workflow* del software, dove i *box* in arancione rappresentano le porzioni di codice scritte in *Cython*.
+
+### Workflow
+Nell'immagine sottostante potete vedere il *workflow* del software, dove i *box* in arancione rappresentano le porzioni di codice scritte in *Cython*.
 
 <img
 src="/sensori/img/picajon/grafico_software.png"
