aggiunto video e modificati grafici frequenze

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -160,7 +160,7 @@ Qui in basso potete vedere i psd delle due zone che ci interessa poter distingue
     <figcaption>Frontale</figcaption>
     <img
     src="/sensori/img/picajon/front.png"
-    style="width: 600px; margin-bottom: 30px"/>
+    style="width: 580px; margin-bottom: 30px"/>
 </figure>
 
 <figure>
@@ -172,14 +172,14 @@ Qui in basso potete vedere i psd delle due zone che ci interessa poter distingue
 
 
 Si nota come i PSD dei colpi frontali sono molto diversi da quelli laterali. Dopo svariati esperimenti abbiamo scelto quelle che secondo noi sono le frequenze (ovvero indici del vettore corrispondente al PSD) significative da utilizzare per identificare la provenienza del colpo.
-* Fascia verde: 43 - 215 Hz
-* Fascia rossa: 215 - 559 Hz
+* Fascia verde: 86 - 172 Hz
+* Fascia rossa: 258 - 344 Hz
 
 
 Utilizzando la formula sottostante e confrontando il risultato ```ratio```  con una soglia siamo stati in grando di identificare la provenienza del colpo:
 
 ```
-ratio = np.sum(psd[2:10]) / np.sum(psd[23:26])
+ratio = np.sum(psd[1:3]) / np.sum(psd[5:7])
 ```
 
 Ora non resta che "suonare" il campione corrispondente.
@@ -229,3 +229,12 @@ Nell'immagine sottostante potete vedere il *workflow* del software, dove i *box*
 src="/sensori/img/picajon/grafico_software.png"
 style="margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
+
+## Dimostrazione
+Ecco una dimostrazione del risultato conseguito
+
+<!-- blank line -->
+<figure class="video_container">
+  <iframe src="https://www.youtube.com/embed/a2xU7fQQuQA" frameborder="0" allowfullscreen="true" width="640px" height="360px"> </iframe>
+</figure>
+<!-- blank line -->
