'sistemazioni al testo'

--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -15,8 +15,8 @@ style="width: 400px; margin-bottom: 30px; display: block;
 margin-left: auto; margin-right: auto;"/>
 
 Al giorno d'oggi il cajon viene utilizzato in contesti di musica moderna dove spesso vi è la necessità di
-utilizzare anche altri tipi di suoni (un tamburello, un clap, un wind chimes..), ecco la definizione di **"cajon aumentato"**.
-Quello che vogliamo fare è  dotare il cajon di una tecnologia **economica** in grado di offrire al musicista la possibilità di aggiungere **due suoni** (*campioni*) per espandere le sue possibilità sonore.
+avere anche altre tipologie di suoni (un tamburello, un clap, un wind chimes..), ecco la definizione di **"cajon aumentato"**.
+Quello che vogliamo fare è  dotare il cajon di una tecnologia **economica** in grado di offrire al musicista la possibilità di aggiungere **due suoni** (*campioni*) per espandere il suo ventaglio sonoro.
 
 Il cajon continuerà a essere suonato al "solito modo", ma quando il musicista suonerà la faccia destra o sinistra dello strumento verranno riprodotti i campioni rispettivi.
 
@@ -35,7 +35,7 @@ src="/sensori/img/picajon/hardware_raspberry.png"
 style="width: 550px; margin-bottom: 30px; display: block; margin-left: auto;
 margin-right: auto;"/>
 
-I pin dei microfoni sono stati collegati al pin del raspeberry in questo modo:
+I pin dei microfoni sono stati collegati ai pin del raspeberry in questo modo:
 
 <img
 src="/sensori/img/picajon/collegamento.png"
@@ -61,8 +61,7 @@ margin-right: auto;"/>
 
 
 
-Come si può notare dalle immagini soprastanti, i microfoni sono stati racchiusi in una scatolina piena di cotone. Questo è stato necessario per non far andare i microfoni in saturazione.
-I microfoni sono stati posizionati internamente al cajon, nello specifico appoggiati alle facciate laterali.
+Come si può notare dalle immagini soprastanti, i microfoni sono stati dapprima incastrati in una specie di gomma e poi racchiusi in una scatolina piena di cotone. Questo è stato necessario per non far andare i microfoni in saturazione. Infine essi sono stati posizionati internamente al cajon, nello specifico appoggiati alle facciate laterali.
 
 ## Idea
 
@@ -74,7 +73,7 @@ I tre punti cruciali del progetto sono:
     - destro
 * **riprodurre** il campione rispettivo (sinistro o destro) "in tempo reale" e gestire il mix tra i due qualora fosse necessario
 
-È da sottolineare come tutte le scelte ai punti sopra devono essere fatte in **"tempo reale"**. Questo aspetto ha condizionato molte delle decisioni prese durante la realizzazione del progetto.
+È da sottolineare come tutte le scelte ai punti sopra devono essere fatte in **"tempo reale"**. Questo aspetto ha condizionato molte scelte implementative prese durante la realizzazione del progetto.
 
 Per la rilevazione degli onset ci siamo avvalsi di: **inviluppo** e **derivata**.
 
@@ -140,7 +139,7 @@ margin-right: auto;"/>
 #### Left/Right, FFT e rapporto
 Per determinare la presenza di un *onset* ci siamo avvalsi dell'utilizzo di una soglia.
 Quando una delle due derivate supera la soglia memorizziamo se si è trattato del canale *left* o *right*
-basandoci sulla "temporizzazione" del colpo ovvero, se il colpo è stato captato prima dal microfono sinistro allora vuol dire che è stato dato sul lato sinistro.
+basandoci sulla "temporizzazione" del colpo, ovvero se il colpo è stato captato prima dal microfono sinistro allora vuol dire che è stato dato sulla faccia sinistro, viceversa su quella destra.
 Subito dopo mettiamo da parte i 1024 campioni successivi, relativi al canale corrispondente, prima di verificare nuovamente la presenza di un onset.
 
 <img
@@ -171,9 +170,9 @@ Qui in basso potete vedere i psd delle due zone che ci interessa poter distingue
 </figure>    
 
 
-Si nota come i PSD dei colpi frontali sono molto diversi da quelli laterali. Dopo svariati esperimenti abbiamo scelto quelle che secondo noi sono le frequenze (ovvero indici del vettore corrispondente al PSD) significative da utilizzare per identificare la provenienza del colpo.
-* Fascia verde: 86 - 172 Hz
-* Fascia rossa: 258 - 344 Hz
+Si nota come i PSD dei colpi frontali sono molto diversi da quelli laterali. Dopo svariati esperimenti abbiamo scelto quelle che secondo noi sono le frequenze (ovvero indici del vettore corrispondente al PSD) significative da utilizzare per identificare la provenienza del colpo:
+* fascia verde: 86 - 172 Hz
+* fascia rossa: 258 - 344 Hz
 
 
 Utilizzando la formula sottostante e confrontando il risultato ```ratio```  con una soglia siamo stati in grando di identificare la provenienza del colpo:
