--- a/_posts/2018-05-21-Pi-cajon.md
+++ b/_posts/2018-05-21-Pi-cajon.md
@@ -234,6 +234,6 @@ Ecco una dimostrazione del risultato conseguito
 
 <!-- blank line -->
 <figure class="video_container">
-  <iframe src="https://www.youtube.com/embed/a2xU7fQQuQA" frameborder="0" allowfullscreen="true" width="640px" height="360px"> </iframe>
+  <iframe src="https://www.youtube.com/embed/9yuBtUkmvDw" frameborder="0" allowfullscreen="true" width="640px" height="360px"> </iframe>
 </figure>
 <!-- blank line -->
